--- a/apps/drec-angular-ui/src/app/view/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-devices/add-devices.component.html
@@ -195,7 +195,7 @@
             </mat-card-content>
             <mat-card-footer>
                 <div class="example-container">
-                    <button type="submit" class="btn-primary btn   btn-block">submit</button>
+                    <button type="submit" class="btn-primary btn   btn-block" [disabled]="myform.invalid">submit</button>
                 </div>
                 
             </mat-card-footer>
