--- a/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
@@ -65,7 +65,7 @@
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let row; let i=index;">
               <!-- <button>certificate</button> -->
-              <button class="btn-primary btn" target="_blank">Edit</button>
+              <button class="btn-primary btn btn-sm" target="_blank">Edit</button>
 
             </td>
           </ng-container>
